<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_criar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/branco">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/branco"
            android:minWidth="25px"
            android:minHeight="25px">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:paddingBottom="5dp"
                android:id="@+id/linearLayout1"
                android:background="@drawable/textline">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/nome_cartao"
                    android:minHeight="50dp"
                    android:hint="@string/lbl_nome_cartao"
                    android:background="@color/branco"
                    android:textColor="@color/primaryText"
                    android:textColorHint="@color/secondaryText"
                    android:paddingLeft="20dp" />
            </LinearLayout>
            <RelativeLayout
                android:minWidth="25px"
                android:minHeight="80dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout1"
                android:background="@drawable/textline"
                android:paddingBottom="10dp">
                <TextView
                    android:text="@string/lbl_dia_fechamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView1"
                    android:textColor="@color/primaryText"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView1"
                    android:id="@+id/txt_dia_fechamento"
                    android:hint="@string/zero"
                    android:inputType="number"
                    android:textColorHint="@color/secondaryText"
                    android:textColor="@color/primaryText"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="7dp"
                    android:background="@color/branco" />
            </RelativeLayout>
            <RelativeLayout
                android:minWidth="25px"
                android:minHeight="80dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout2"
                android:background="@drawable/textline"
                android:paddingBottom="10dp">
                <TextView
                    android:text="@string/lbl_dia_vencimento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_dia_vencimento"
                    android:textColor="@color/primaryText"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_dia_vencimento"
                    android:id="@+id/txt_dia_vencimento"
                    android:hint="@string/zero"
                    android:textColorHint="@color/secondaryText"
                    android:textColor="@color/primaryText"
                    android:paddingLeft="20dp"
                    android:inputType="number"
                    android:layout_marginTop="7dp"
                    android:background="@color/branco" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout3"
                android:background="@drawable/textline"
                android:minHeight="80dp"
                android:paddingBottom="10dp">
                <TextView
                    android:text="@string/lbl_limite_disponivel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_limite_disponivel"
                    android:textColor="@color/primaryText"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_limite_disponivel"
                    android:id="@+id/txt_limite_disponivel"
                    android:background="@color/branco"
                    android:textColorHint="@color/secondaryText"
                    android:textColor="@color/primaryText"
                    android:inputType="number"
                    android:hint="@string/precos"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="7dp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout4"
                android:background="@drawable/textline"
                android:minHeight="80dp"
                android:paddingBottom="10dp">
                <TextView
                    android:text="@string/lbl_limite_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_limite_total"
                    android:textColor="@color/primaryText"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lbl_limite_total"
                    android:id="@+id/txt_limite_total"
                    android:background="@color/branco"
                    android:textColorHint="@color/secondaryText"
                    android:textColor="@color/primaryText"
                    android:hint="@string/precos"
                    android:paddingLeft="20dp"
                    android:inputType="number"
                    android:layout_marginTop="7dp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout5"
                android:background="@drawable/textline"
                android:minHeight="80dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    android:paddingBottom="10dp"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground">
                    <TextView
                        android:text="@string/lbl_bandeira"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lbl_bandeira"
                        android:textColor="@color/primaryText"
                        android:paddingTop="10dp"
                        android:paddingLeft="20dp" />
                    <TextView
                        android:text="@string/selecione"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lbl_bandeira"
                        android:id="@+id/txt_bandeira"
                        android:textColor="@color/secondaryText"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="7dp"
                        android:layout_marginLeft="20dp" />
                </RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout6"
                android:minHeight="80dp"
                android:background="@drawable/textline"
                android:paddingBottom="10dp">
                <TextView
                    android:text="@string/descricao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textColor="@color/primaryText"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView2"
                    android:id="@+id/txt_descricao"
                    android:paddingLeft="20dp"
                    android:background="@color/branco"
                    android:layout_marginTop="7dp"
                    android:hint="@string/adicionar_descricao"
                    android:textColor="@color/primaryText"
                    android:textColorHint="@color/secondaryText" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>