<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_criar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/branco"
        android:minWidth="25px"
        android:minHeight="25px">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/linearLayout1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="66dp"
                android:paddingBottom="5dp"
                android:background="@drawable/textline">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_nome_receita"
                    android:minHeight="63dp"
                    android:background="@color/branco"
                    android:textColor="@color/primaryText"
                    android:textColorHint="@color/secondaryText"
                    android:hint="@string/nome_despesa"
                    android:paddingLeft="20dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout2"
                android:background="@drawable/textline"
                android:minHeight="80dp"
                android:paddingBottom="10dp">
                <TextView
                    android:text="@string/valor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lvl_valor"
                    android:textColor="@color/primaryText"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lvl_valor"
                    android:id="@+id/txt_valor"
                    android:hint="@string/adicionar_valor"
                    android:textColorHint="@color/secondaryText"
                    android:textColor="@color/primaryText"
                    android:paddingRight="10dp"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="7dp"
                    android:background="@color/branco"
                    android:inputType="number" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout3"
                android:background="@drawable/textline"
                android:minHeight="80dp"
                android:paddingBottom="10dp">
                <TextView
                    android:text="@string/valor_recebido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lvl_valor_recebido"
                    android:textColor="@color/primaryText"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lvl_valor_recebido"
                    android:id="@+id/txt_valor_recebido"
                    android:hint="@string/adicionar_valor_recebido"
                    android:inputType="number"
                    android:textColorHint="@color/secondaryText"
                    android:textColor="@color/primaryText"
                    android:paddingRight="10dp"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="7dp"
                    android:background="@color/branco" />
            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="80dp"
                android:background="@drawable/textline">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground">
                    <TextView
                        android:text="@string/conta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lbl_conta"
                        android:textColor="@color/primaryText"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/lbl_conta"
                        android:id="@+id/txt_conta"
                        android:textColor="@color/secondaryText"
                        android:text="@string/selecione"
                        android:layout_marginLeft="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10dp" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/textline"
                android:minHeight="80dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground">
                    <TextView
                        android:text="@string/categoria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lbl_categoria"
                        android:textColor="@color/primaryText"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_categoria"
                        android:layout_below="@id/lbl_categoria"
                        android:textColor="@color/secondaryText"
                        android:text="@string/selecione"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textline"
                android:minHeight="80dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground">
                    <TextView
                        android:text="@string/vencimento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lbl_vencimento"
                        android:textColor="@color/primaryText"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_dt_vencimento"
                        android:layout_below="@id/lbl_vencimento"
                        android:textColor="@color/secondaryText"
                        android:text="@string/adicionar_data"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/textline"
                android:minHeight="80dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground">
                    <TextView
                        android:text="@string/data_pagamento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lbl_dt_pagamento"
                        android:textColor="@color/primaryText"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_dt_pagamento"
                        android:textColor="@color/secondaryText"
                        android:layout_below="@id/lbl_dt_pagamento"
                        android:text="@string/adicionar_data"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/textline"
                android:minHeight="80dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="80dp"
                    android:clickable="true"
                    android:background="?android:attr/selectableItemBackground">
                    <TextView
                        android:text="@string/situacao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/lbl_situacao"
                        android:textColor="@color/primaryText"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_situacao"
                        android:layout_below="@id/lbl_situacao"
                        android:textColor="@color/secondaryText"
                        android:text="@string/selecione"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp" />
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textline"
                android:minHeight="80dp"
                android:paddingBottom="10dp">
                <TextView
                    android:text="@string/descricao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lvl_descricao"
                    android:textColor="@color/primaryText"
                    android:paddingTop="10dp"
                    android:paddingLeft="20dp" />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lvl_descricao"
                    android:id="@+id/txt_descricao"
                    android:hint="@string/adicionar_descricao"
                    android:textColorHint="@color/secondaryText"
                    android:textColor="@color/primaryText"
                    android:paddingRight="10dp"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="7dp"
                    android:background="@color/branco" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>