<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ripple_bg"
        android:clickable="true">
        <TextView
            android:text="@string/Adicionar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_adicionar"
            android:textColor="@color/primaryText"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lbl_adicionar"
            android:id="@+id/txt_titulo"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText"
            android:layout_marginRight="10dp"
            android:hint="@string/titulo"
            android:padding="5dp"
            android:background="@color/branco" />

        <EditText
            android:minHeight="70dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_titulo"
            android:id="@+id/txt_descricao"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:hint="@string/descricao"
            android:padding="5dp"
            android:background="@color/branco" />
    </RelativeLayout>
</LinearLayout>